--- a/.travis.yml
+++ b/.travis.yml
@@ -102,11 +102,19 @@ install:
         ;
     fi
 
-    - if [ "${SPEC}" = "macx-clang" ]; then
-        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.0-clang_64-min.tar.bz2 &&
-        tar jxf Qt5.11.0-clang_64-min.tar.bz2 -C /tmp
+    - if [ "${BITNESS}" = "64" ]; then
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_arm64_v8a-min.tar.bz2 &&
+        tar jxf Qt5.12.4-android_arm64_v8a-min.tar.bz2 -C /tmp &&
+        export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.4/android_arm64_v8a/bin:$PATH
         ;
-    fi
+      fi
+
+    - if [ "${BITNESS}" = "32" ]; then
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
+        tar jxf Qt5.12.4-android_armv7-min.tar.bz2 -C /tmp &&
+        export PATH=/tmp/Qt5.12-android_armv7/5.12.4/android_armv7/bin:$PATH
+        ;
+      fi
 
   # osx dependencies: qt (master builds only: gstreamer, gstreamer-devel)
   - if [ "${SPEC}" = "macx-clang" ]; then
