--- a/.travis.yml
+++ b/.travis.yml
@@ -102,14 +102,14 @@ install:
         ;
     fi
 
-  - if [ "${BITNESS}" = "64" ]; then
+  - if [ "${BITNESS}" = "64-bit" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_arm64_v8a-min.tar.bz2 &&
         tar jxf Qt5.12.4-android_arm64_v8a-min.tar.bz2 -C /tmp &&
         export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.4/android_arm64_v8a/bin:$PATH
         ;
     fi
 
-  - if [ "${BITNESS}" = "32" ]; then
+  - if [ "${BITNESS}" = "32-bit" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
         tar jxf Qt5.12.4-android_armv7-min.tar.bz2 -C /tmp &&
         export PATH=/tmp/Qt5.12-android_armv7/5.12.4/android_armv7/bin:$PATH
