--- a/.travis.yml
+++ b/.travis.yml
@@ -14,24 +14,29 @@ env:
 matrix:
     fast_finish: true
     include:
-        - os: linux
+        - name: "Linux Installer"
+          os: linux
           dist: xenial
           env: SPEC=linux-g++-64 CONFIG=installer
           sudo: required
-        - os: linux
+        - name: "Linux Debug"
+          os: linux
           dist: xenial
           env: SPEC=linux-g++-64 CONFIG=debug
           services: xvfb
           sudo: required
-        - dist: trusty
+        - name: "Android 32 bit"
+          dist: trusty
           language: android
-          env: SPEC=android-clang CONFIG=installer BITNESS=32
+          env: SPEC=android-clang CONFIG=installer BITNESS=32-bit
           sudo: false
-        - dist: trusty
+        - name: "Android 64 bit"
+          dist: trusty
           language: android
-          env: SPEC=android-clang CONFIG=installer BITNESS=64
+          env: SPEC=android-clang CONFIG=installer BITNESS=64-bit
           sudo: false
-        - os: osx
+        - name: "OSX Installer"
+          os: osx
           osx_image: xcode9.2
           env: SPEC=macx-clang CONFIG=installer
           sudo: required
@@ -89,13 +94,25 @@ install:
   - if [ "${SPEC}" = "android-clang" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
         tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
-        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
-        tar jxf Qt5.12.4-android_armv7-min.tar.bz2 -C /tmp &&
         wget --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip &&
         unzip android-ndk-r20-linux-x86_64.zip > /dev/null &&
         export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 &&
         export ANDROID_SDK_ROOT=/usr/local/android-sdk &&
-        export PATH=/tmp/Qt5.12-android_armv7/5.12.4/android_armv7/bin:`pwd`/android-ndk-r20:$PATH && echo $PATH
+        export PATH=`pwd`/android-ndk-r20:$PATH
+        ;
+    fi
+
+  - if [[ "${SPEC}" = "android-clang" && "${BITNESS}" = "64-bit" ]]; then
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_arm64_v8a-min.tar.bz2 &&
+        tar jxf Qt5.12.4-android_arm64_v8a-min.tar.bz2 -C /tmp &&
+        export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.4/android_arm64_v8a/bin:$PATH
+        ;
+    fi
+
+  - if [[ "${SPEC}" = "android-clang" && "${BITNESS}" = "32-bit" ]]; then
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
+        tar jxf Qt5.12.4-android_armv7-min.tar.bz2 -C /tmp &&
+        export PATH=/tmp/Qt5.12-android_armv7/5.12.4/android_armv7/bin:$PATH
         ;
     fi
 
